# ADIOS2

./: .clang-format  .clang-tidy  .dockerignore  .git-remote-files  .gitattributes  .gitignore  .osti-nmc-ci.yaml  .readthedocs.yaml  .readthedocs.yml  .shellcheck_exclude_paths  .travis.yml  CITATION.cff  CLAUDE.md  CMakeLists.txt  CODEOWNERS  CTestConfig.cmake  CTestCustom.cmake.in  CTestCustom.ctest.in  Contributing.md  Copyright.txt  Makefile  Makefile.libs  README-cori.tau  README.md  README.tau  REUSE.toml  ReadMe.md  Readme.txt  SECURITY.md  WINDOWS_PORT_NOTES.txt  aaargh.cmake  aaargh.sh  aaargh_GCC_IMPI.cmake  aaargh_GCC_MPICH.cmake  aaargh_GCC_MVAPICH2.cmake  aaargh_GCC_NoMPI.cmake  aaargh_GCC_OpenMPI.cmake  aaargh_Intel_IMPI.cmake  aaargh_Intel_MPICH.cmake  aaargh_Intel_MVAPICH2.cmake  (+85 more)
benchmarks/: CMakeLists.txt  metadata_complexity.cpp
bindings/: CMakeLists.txt
bindings/C/: CMakeLists.txt  adios2_c.cpp  adios2_c.h
bindings/CXX/: CMakeLists.txt  adios2.h  cxx11_wrapper.h.in
bindings/CXX03/: CMakeLists.txt  adios2_cxx03.h
bindings/CXX11/: CMakeLists.txt  adios2.h
bindings/CXX98/: CMakeLists.txt  adios2_cxx98.h
bindings/Fortran/: CMakeLists.txt
bindings/Matlab/: Makefile  README.txt  adios.m  adiosclose.m  adiosclosec.c  adiosload.m  adiosopen.m  adiosopenc.c  adiosread.m  adiosreadc.c
bindings/Python/: CMakeLists.txt  __init__.py  __init__.py.in  nbADIOS.cpp  nbADIOS.h  nbADIOSMPI.cpp  nbAttribute.cpp  nbAttribute.h  nbEngine.cpp  nbEngine.h  nbGlue.cpp  nbIO.cpp  nbIO.h  nbIOMPI.cpp  nbOperator.cpp  nbOperator.h  nbQuery.cpp  nbQuery.h  nbTypes.h  nbVariable.cpp  nbVariable.h  nbVariableDerived.cpp  nbVariableDerived.h  py11ADIOS.cpp  py11ADIOS.h  py11ADIOSMPI.cpp  py11Attribute.cpp  py11Attribute.h  py11Engine.cpp  py11Engine.h  py11File.cpp  py11File.h  py11File.tcc  py11FileMPI.cpp  py11IO.cpp  py11IO.h  py11IOMPI.cpp  py11Operator.cpp  py11Operator.h  py11Query.cpp  (+7 more)
bindings/c/: CMakeLists.txt  Makefile  adios2_c.cpp  adios2_c.h  adios2_c_enums.h
bindings/fortran/: CMakeLists.txt  adios2_engine_mod.f90  adios2_engine_write_mod.f90  adios2_f2c.cpp  adios2_f2c.h  adios2_io_mod.f90  adios2_mod.f90  adios2_parameters.f90  adios2_params_mod.f90
bindings/python/: ADIOSPy.cpp  ADIOSPy.h  CMakeLists.txt  EnginePy.cpp  EnginePy.h  EnginePy.inl  FilePy.cpp  FilePy.h  IOPy.cpp  IOPy.h  Makefile  PyADIOS.cpp  PyAttribute.cpp  PyEngine.cpp  PyEnums.cpp  PyIO.cpp  PySelection.cpp  PyVariable.cpp  README.md  VariablePy.cpp  VariablePy.h  adios2py.cpp  adiosPyFunctions.cpp  adiosPyFunctions.h  adiosPyTypes.h  gluePyBind11.cpp  gluePyBind11_nompi.cpp  helloBPTimeWriter.py  helloBPWriter.py  test_hello.py  typesPy.h
examples/: CMakeLists.txt  ReadMe.md  derived_recv.c  transform_recv2.c
examples/KortewegdeVries/: CMakeLists.txt  KdV.cpp  README.md  graph.py
examples/basics/: CMakeLists.txt  ReadMe.md
examples/cache/: build_cache.sh
examples/campaign/: CMakeLists.txt  bpWriteRead.cpp  campaign_many_files.py  campaign_many_files.sh  campaign_write.cpp
examples/cuda/: CMakeLists.txt  cudaBP4WriteRead.cu  cudaBP5WriteRead.cu  cudaBPWriteRead.cu  cudaWriteRead.cu
examples/dataman/: datamanNoXML.cpp
examples/derived/: #CMakeLists.txt#  CMakeLists.txt  TestCorrectness.cpp  TestGrammar.cpp  read_write_derived.cpp  write_derived.cpp
examples/dummy/: CMakeLists.txt  dummy.c  dummy.h  reader.c  writer.c
examples/experimental/: CMakeLists.txt
examples/fides/: CMakeLists.txt
examples/globalArray/: Makefile  globalArrayNoXML.cpp  globalArrayNoXML.xml  globalArrayXML.cpp  globalArrayXML.xml  globalArrayZeroCopy.cpp
examples/groupless/: CMakeLists.txt  reader.cpp  writer.cpp
examples/h5subfile/: CMakeLists.txt  h5_subfile.cpp
examples/h5vol/: CMakeLists.txt  H5VolError.h  H5VolReadWrite.c  H5VolReadWrite.h  H5Vol_dataset.c  H5Vol_def.h  H5Vol_link.c  main.c
examples/heatTransfer/: CMakeLists.txt  HeatTransfer.cpp  HeatTransfer.h  IO.h  IO_adios1.cpp  IO_adios2.cpp  IO_ascii.cpp  IO_hdf5_a.cpp  Makefile  ReadMe.md  Settings.cpp  Settings.h  TestBPFileMx1.cmake  TestBPFileMx1_zfp.cmake  TestBPFileMxM.cmake  TestBPFileMxN.cmake  TestInsituMPIMx1.cmake  TestInsituMPIMxM.cmake  TestInsituMPIMxN.cmake  TestSSTBPMx1.cmake  TestSSTBPMxM.cmake  TestSSTBPMxN.cmake  TestSSTBPRDMAMxN.cmake  TestSSTFFSMx1.cmake  TestSSTFFSMxM.cmake  TestSSTFFSMxN.cmake  TestSSTFFSRDMAMxN.cmake  TestSSTMx1.cmake  TestSSTMxM.cmake  TestSSTMxN.cmake  heat.xml  heatTransfer.cpp  heatTransferStructs.h  heat_adios1.xml  heat_bp3.xml  heat_bp3_zfp.xml  heat_bp4.xml  heat_bp4_zfp.xml  heat_bp4file.xml  heat_bp4file_zfp.xml  (+17 more)
examples/hello/: CMakeLists.txt  Makefile  README  README.md  ReadMe.md  fstream.xml  helloADIOS.cpp  helloADIOS_C.c  helloADIOS_nompi.cpp  helloFStream.cpp  helloFStreamNoXML.cpp  writer.xml  writer2Groups.xml
examples/highLevelAPI/: BPStreamWrite.cpp  BPStreamWrite_nompi.cpp  BPWriteReadHighLevelAPI.py  BPWriteTypesConfig.py  CMakeLists.txt  TestBPWriteTypesHighLevelAPIConfig.py  adios2NPTypes.py
examples/inlineMWE/: CMakeLists.txt  inlineMWE.cpp
examples/kokkos/: CMakeLists.txt  kokkosWriteRead.cpp
examples/mhd_orszag_tang/: CMakeLists.txt  README.md
examples/plugins/: CMakeLists.txt  ReadMe.md
examples/query/: CMakeLists.txt  test.cpp  test_xml.cpp
examples/simulations/: CMakeLists.txt  ReadMe.md
examples/solidfluid/: Makefile  solidfluid.xml  solidfluid_read.cpp  solidfluid_write.cpp  solidfluid_write_nompi.cpp
examples/useCases/: CMakeLists.txt  ReadMe.md
examples/xmlParser/: Makefile  xmlParser.cpp
source/: ADIOS.cpp  ADIOS.h  ADIOS.tcc  ADIOSMacros.h  ADIOSTypes.h  ADIOS_C.cpp  ADIOS_inst.cpp  CMakeLists.txt  adios2.h  adios2.h.in  mpidummy.cpp  mpidummy.h
source/adios2/: ADIOS.cpp  ADIOS.h  ADIOS.inl  ADIOS.tcc  ADIOSConfig.h.in  ADIOSMPI.h  ADIOSMPICommOnly.h  ADIOSMacros.h  ADIOSTypes.cpp  ADIOSTypes.h  ADIOSTypes.inl  ADIOS_MPI.h  CMakeLists.txt  mpidummy.cpp  mpidummy.h
source/capsule/: CMakeLists.txt
source/core/: Attribute.h  CMakeLists.txt  Capsule.cpp  Engine.cpp  Engine.h  IOChrono.h  Method.cpp  (+17 more)
testing/: CMakeLists.txt
(+3946 files in other folders)
