[build-system]
requires = ["scikit-build-core", "numpy", "setuptools_scm>=8"]
build-backend = "scikit_build_core.build"

[project]
name = "adios2_scottwittenburg"
dynamic = ["version"]
authors = [
  { name="Chuck Atkins", email="chuck.atkins@kitware.com" },
  { name="Greg S. Eisenhauer", email="eisen@cc.gatech.edu" },
  { name="William F. Godoy", email="godoywf@ornl.gov" },
  { name="Junmin Gu", email="jgu@lbl.gov" },
  { name="Norbert Podhorszki", email="pnorbert@ornl.gov" },
  { name="Ruonan (Jason) Wang", email="wangr1@ornl.gov" },
]
description = "The Adaptable Input Output System version 2"
readme = "ReadMe.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: C++",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
]

[project.urls]
Homepage = "https://github.com/ornladios/adios2"
Issues = "https://github.com/ornladios/adios2/issues"

[tool.scikit-build]
wheel.packages = ["adios2"]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]  # Section required
write_to = "_version.py"

[tool.scikit-build.cmake.define]
ADIOS2_USE_Python = "ON"
ADIOS2_USE_Fortran = "OFF"
ADIOS2_USE_MPI = "OFF"
ADIOS2_USE_HDF5 = "OFF"
ADIOS2_USE_HDF5_VOL = "OFF"
ADIOS2_USE_BZip2 = "OFF"
ADIOS2_USE_Blosc2 = "OFF"
ADIOS2_USE_DataMan = "OFF"
ADIOS2_USE_SZ = "OFF"
ADIOS2_USE_ZeroMQ = "OFF"
ADIOS2_USE_ZFP = "OFF"
ADIOS2_PIP_INSTALL = "ON"
BUILD_TESTING = "OFF"
ADIOS2_INSTALL_GENERATE_CONFIG = "OFF"
