[build-system]
requires = ["scikit-build-core", "numpy", "setuptools_scm>=8"]
build-backend = "scikit_build_core.build"

[project]
name = "adios2"
dynamic = ["version"]
authors = [
  { name="Caitlin Ross", email="caitlin.ross@kitware.com" },
  { name="Chuck Atkins", email="chuck.atkins@kitware.com" },
  { name="Greg S. Eisenhauer", email="eisen@cc.gatech.edu" },
  { name="Junmin Gu", email="jgu@lbl.gov" },
  { name="Norbert Podhorszki", email="pnorbert@ornl.gov" },
  { name="Ruonan (Jason) Wang", email="wangr1@ornl.gov" },
  { name="Scott Wittenburg", email="scott.wittenburg@kitware.com" },
  { name="Spiros Tsalikis", email="spiros.tsalikis@kitware.com" },
  { name="V. A. Bolea Sanchez", email="vicente.bolea@kitware.com" },
  { name="William F. Godoy", email="godoywf@ornl.gov" },
]
description = "The Adaptable Input Output System version 2"
readme = "ReadMe.md"
requires-python = ">=3.9"
keywords = [
    "Python",
    "Web",
    "Application",
    "Framework",
]
classifiers = [
    "Programming Language :: C++",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy>=1.22",
]

[project.optional-dependencies]
dev = [
  'ruff',
  "pip>=21.3",
]

[project.urls]
Homepage = "https://github.com/ornladios/adios2"
Documentation = "https://adios2.readthedocs.io/"
"Bug Tracker" = "https://github.com/ornladios/adios2/issues"
Discussions = "https://github.com/ornladios/ADIOS2/discussions"
Changelog = "https://github.com/ornladios/ADIOS2/releases"

[tool.cibuildwheel]
# Trigger an install of the package, and run a basic test
test-command = "python -m unittest adios2.test.simple_read_write.TestSimpleReadWrite"

[tool.cibuildwheel.linux]
before-all = "yum install -y openssl-devel"

# For Python 3.12+ enable the stable ABI so a single wheel covers all future
# interpreters. For 3.9–3.11 a standard per-version wheel is built instead.
[[tool.cibuildwheel.overrides]]
select = "cp312-*"
config-settings."wheel.py-api" = "cp312"
config-settings."cmake.define.ADIOS2_USE_PythonStableABI" = "ON"

# For free-threaded Python 3.13t enable the free-threaded (no-GIL) extension.
# Note: Py_LIMITED_API (abi3) is incompatible with free-threaded builds, so a
# separate wheel must be built for each future free-threaded Python version.
[[tool.cibuildwheel.overrides]]
select = "cp313t-*"
config-settings."cmake.define.ADIOS2_USE_PythonFreeThreaded" = "ON"

[tool.scikit-build]
wheel.packages = ["python/adios2"]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "VERSION.TXT"
regex = "^(?P<value>.+?)$"

[tool.scikit-build.cmake.define]
ADIOS2_INSTALL_GENERATE_CONFIG = "OFF"
ADIOS2_USE_Blosc2 = "OFF"
ADIOS2_USE_BZip2 = "OFF"
ADIOS2_USE_CURL = "OFF"
ADIOS2_USE_Curl = "ON"
ADIOS2_USE_DataMan = "OFF"
ADIOS2_USE_Fortran = "OFF"
ADIOS2_USE_HDF5 = "OFF"
ADIOS2_USE_HDF5_VOL = "OFF"
ADIOS2_USE_MPI = "OFF"
ADIOS2_USE_OpenSSL = "ON"
ADIOS2_USE_PIP = "ON"
ADIOS2_USE_Python = "ON"
ADIOS2_USE_SZ = "OFF"
ADIOS2_USE_ZeroMQ = "OFF"
ADIOS2_USE_ZFP = "OFF"
BUILD_TESTING = "OFF"
EVPATH_TRANSPORT_MODULES = "OFF"

[[tool.scikit-build.overrides]]
if.platform-system = "win32"
cmake.define.ADIOS2_USE_OpenSSL = "OFF"
cmake.define.ADIOS2_USE_Curl = "OFF"
inherit.cmake.define = "append"

[tool.ruff]
line-length = 100
exclude = ["thirdparty", ".gitlab/config/SpackCIBridge.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "PL"]
# E302/F401/F403/F405: carried over from flake8 config
# PLR0904: too-many-public-methods (was R0904 in pylint disable list)
# PLR0913: too-many-arguments (was R0913 in pylint disable list)
# PLW1641: not previously enforced by pylint
ignore = ["E302", "F401", "F403", "F405", "PLR0904", "PLR0913", "PLW1641"]

[tool.ruff.lint.per-file-ignores]
# PL rules only apply to the main Python package (mirrors original pylint scope)
"bindings/**" = ["PL"]
"examples/**" = ["PL"]
"source/**" = ["PL"]
"testing/**" = ["PL"]
